manifests/base/backend-melbourne.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-app
  namespace: demo-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blue-app
  template:
    metadata:
      labels:
        app: blue-app
    spec:
      containers:
      - name: blue-app
        image: hashicorp/http-echo:1.0.0
        args: ["-text=hello from melbourne blue"]
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: blue-app
  namespace: demo-app
spec:
  selector:
    app: blue-app
  ports:
  - port: 8080
    targetPort: 5678
