manifests/base/backend-sydney.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green-app
  namespace: demo-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: green-app
  template:
    metadata:
      labels:
        app: green-app
    spec:
      containers:
      - name: green-app
        image: hashicorp/http-echo:1.0.0
        args: ["-text=hello from sydney green"]
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: green-app
  namespace: demo-app
spec:
  selector:
    app: green-app
  ports:
  - port: 8080
    targetPort: 5678
